Compucom CCQA Org 100919/src/objects/Forecast_Quota__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName + &quot; &quot; + Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCST Prior Years</relationshipLabel>
        <relationshipName>Quota</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year_Planning__c</referenceTo>
        <relationshipLabel>FCST Prior Years</relationshipLabel>
        <relationshipName>Quota</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quota</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Measure__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Planning Measure</label>
        <referenceTo>Planning_Financial_Measure__c</referenceTo>
        <relationshipLabel>FCST Prior Years</relationshipLabel>
        <relationshipName>Quota</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>FCST Prior Year</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Quota-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Prior Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>